--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@ body {
     box-sizing: border-box;
     display: grid; 
     grid-template-rows: 1fr 8fr;
-    grid-template-columns: 300px 3fr; 
+    grid-template-columns: 1fr 3fr; 
 }
 
 .sidebarBtn {
@@ -32,8 +32,9 @@ body {
 
 .header {
     height: 13vh;
+    width: 100vw;
     background-color: #0e7490;
-    grid-column: 1/ span 2;
+    grid-column: 1/span 2;
     display: flex; 
 }
 
