--- a/src/style.css
+++ b/src/style.css
@@ -96,13 +96,16 @@ h3 {
 }
 
 .projects {
+    border: 1px solid blue; 
     display: flex;
     flex-direction: column;
 }
 
 .add-project {
+    border: 1px solid blue; 
     margin-left: 30px;
     display: flex;
+    width: 200px;
 }
 
 .add-project:hover {
