Add a select menu to the form that visualizes the projects names

--- a/src/style.css
+++ b/src/style.css
@@ -250,7 +250,7 @@ h3 {
     flex-wrap: wrap;  
 }
 
-.task-title, .description, .date, .priority {
+.task-title, .description, .date, .priority, .select-project {
     color: white;
     margin: 3px;
     display: flex;
